# hpvm-spandex

./: .gitignore  notes.md
hpvm/: CMakeLists.txt
hpvm/include/Spandex/: Spandex.h
hpvm/include/util/: demangle.hpp  enum.hpp  graph_util.hpp  hpvm_util.hpp  iterator_util.hpp  llvm_util.hpp  result.hpp  types.hpp
hpvm/lib/Transforms/: CMakeLists.txt
hpvm/lib/Transforms/DFG2LLVM_CPU/: DFG2LLVM_CPU.cpp
hpvm/lib/Transforms/GenHPVM/: GenHPVM.cpp
hpvm/lib/Transforms/Spandex/: Spandex.cpp  chaff.txt  dfg_util.hpp  graph_util.hpp  hpvm_util.hpp  llvm_util.hpp  notes.md  result.h  spandex_util.hpp  test.ll  type_util.hpp  util.hpp
hpvm/lib/Transforms/hpvm_datarace_detector/: CMakeLists.txt  LLVMBuild.txt  main.cpp
hpvm/scripts/: data_processing.py  data_processing2.py  docker.sh  hpvm_build.sh  hpvm_datarace_detector.sh  plot_clustered_stacked.py  run_all.sh  run_docker.sh
hpvm/test/benchmarks/cava/: .gitignore  Makefile  README.md  coarse_leaf_dfg.dot  dfg.dot  leaf_dfg.dot  mem_comm_dfg.dot
hpvm/test/benchmarks/ed/: Makefile  coarse_leaf_dfg.dot  dfg.dot  leaf_dfg.dot  mem_comm_dfg.dot
hpvm/test/benchmarks/hpvm-cava/: Makefile  coarse_leaf_dfg.dot  dfg.dot  leaf_dfg.dot  mem_comm_dfg.dot
hpvm/test/benchmarks/include/: hpvm.h
hpvm/test/benchmarks/pipeline/: Makefile  README.md  coarse_leaf_dfg.dot  dfg.dot  leaf_dfg.dot  mem_comm_dfg.dot
hpvm/test/unitTests/: ThreeLevel.ll
report/: comment.cut  conclusion.tex  experimental_results.tex  future_work.tex  implementation.tex  introduction.tex  main.bib  main.tex  methods.tex  related_work.tex
(+37 files in other folders)
